Shruthi2, Hemanth | #387 | published events from event records to events log